kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-07-29T05:06:47Z"
  labels:
    app: enterprise-devops-web
  name: enterprise-devops-web
  namespace: enterprise-devops
  resourceVersion: "18831"
  uid: 9145cb10-4347-4b6d-9a3c-141f870ee531
spec:
  clusterIP: 10.99.96.182
  clusterIPs:
  - 10.99.96.182
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32369
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: enterprise-devops-web
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
